syntax = "proto3";

package io.odpf.firehose.consumer;

option java_multiple_files = true;
option java_package = "io.odpf.firehose.consumer";
option java_outer_classname = "TestMessageProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

message TestKey {
  string order_number = 1;
  string order_url = 2;
}

message TestMessage {
  string order_number = 1;
  string order_url = 2;
  string order_details = 3;
}

message TestNestedMessage {
  string nested_id = 1;
  TestMessage single_message = 2;
}

message TestNestedRepeatedMessage {
  TestMessage single_message = 1;
  repeated TestMessage repeated_message = 2;
  int32 number_field = 3;
  repeated int32 repeated_number_field = 4;
}

message TestMapMessage {
  string order_number = 1;
  map<string, string> current_state = 2;
}

message TestDurationMessage {
  string order_number = 1;
  string order_url = 2;
  string order_details = 3;
  google.protobuf.Duration duration = 4;
  google.protobuf.Timestamp event_timestamp = 5;
}

message TestBytesMessage{
  string order_number = 1;
  bytes content = 2;
}

message TestStructMessage{
  string order_number = 1;
  google.protobuf.Struct custom_fields = 2;
  repeated google.protobuf.Struct list_custom_fields = 3;
}

message TestStatus{
  enum Enum{
    CREATED = 0;
    IN_PROGRESS = 1;
    COMPLETED = 2;
  }
}

message TestEnumMessage{
  string order_number = 1;
  TestStatus.Enum last_status = 2;
  repeated TestStatus.Enum status_history = 3;
}

message TestTypesMessage{
  float float_value = 1;
  double double_value = 2;
  int32 int32_value = 3;
  int64 int64_value = 4;
  uint32 uint32_value = 5;
  uint64 uint64_value = 6;
  fixed32 fixed32_value = 7;
  fixed64 fixed64_value = 8;
  sfixed32 sfixed32_value = 9;
  sfixed64 sfixed64_value = 10;
  sint32 sint32_value = 11;
  sint64 sint64_value = 12;

  TestEnumTypeMessage.Enum enum_value = 13;
  bytes bytes_value = 14;
  string string_value = 15;
  bool bool_value = 16;
  TestMessage message_value = 17;

  repeated string list_values = 18;
  repeated TestMessage list_message_values = 19;
  google.protobuf.Timestamp timestamp_value = 20;
  google.protobuf.Struct struct_value = 21;
  google.protobuf.Duration duration_value = 22;
  google.protobuf.BoolValue wrapped_bool_value = 24;

}
message TestEnumTypeMessage{
  enum Enum{
    CATEGORY_1 = 0;
    CATEGORY_2 = 1;
  }
}

